# registry-manager.rapture-farms-db

./: .gitmodules  CMakeLists.txt  README.md  install.sh  reset.sh  upgrade.sh
agent-config-db/: 5d0652e0-bcdc-48ad-a9ef-ac09a748ef08.json  5db9ecdf-d75e-4d82-8ddc-9605c4ae1898.json  bd142cfa-cda3-46e4-a4a2-b1e9ce4be843.json
app-config-db/: .db-version  1d454dd3-8498-48bc-897e-193b843e99f3.json
authorization-group-config-db/: 00d5f25d-4824-4943-9301-188f2c0dd8b5.json  1a997eb7-cf04-484c-970d-8de418289dd3.json  1cef83d9-250d-4e70-9d4a-d3a59c3c0ed5.json  32826ce6-007d-47ca-b664-8bf4dcfc828f.json  3baad9f8-985d-4363-ae8f-03c1d9977bbe.json  610972e3-0ca2-4780-bd69-30e1517c1fc8.json  764b581b-96d7-45ee-9fa7-ce5a4c393970.json  79f35ea6-971b-4b25-aa3f-e533784bbd19.json  7f8cc15b-eef6-459c-b0e9-59646b8dd826.json  933b458b-a31a-4bfb-ae8d-e6a291117c2e.json  9b30538f-e9d7-4c95-9504-9316e924dc50.json  a3113b00-da7c-480e-b616-d0c8e0ef48bc.json  b7b313a1-e378-4f8e-899d-8c87bec92db4.json  c4e2adf8-84a2-436b-83c9-49ec3074e997.json  c8bbbe6b-c1d2-4d47-a2dc-5af39b19a4ad.json  cfd18500-412d-43fc-ab31-4976b40a9660.json  f564b34a-dfa5-443f-b764-cba736f639b7.json  f93de515-272e-4f8d-ab54-2f4ac08a6426.json  fdaec63b-0d3a-4722-8634-182bb2977c06.json
connection-config-db/: 1a8b257e-4b7e-43a3-870b-a257ceabdbec.json  576dc238-59df-44a8-8db6-f190f3f5e9de.json  871efec3-ae76-4c79-a768-09c17b857d22.json  e108f6a0-aae4-40b6-bf15-be2787e84672.json
dal-unit-config-db/: 07d3ef5c-97d8-4602-958e-4769c2cca43b.json  13a6a135-1344-4dce-9023-e982b9a1e54a.json  29c32111-c34c-464a-8f4b-49282191b1e0.json  2ce0b889-fa32-46f4-9e26-f75926f1a9a9.json  301be715-1f96-4b38-95df-79b1dcd42c6d.json  3050ccb9-c063-4f74-8050-a26d9f8fb568.json  445c65f0-d0c8-480d-8ea7-77015ee65ba7.json  5b95cbe5-2497-4c0b-be71-0c9d1ad9a138.json  6432d466-846d-43d2-a226-17efca645bc2.json  7e64c8bd-25cd-4306-a58d-4c48eee999bd.json  7f15b376-a86d-4bef-a6d8-eddca604f58d.json  9084d54c-89b5-4f21-8873-cecbf97f858b.json  9eea3ee4-73a7-4f20-b435-6c5437dd3734.json  bc92daa7-f4ec-404d-a08e-cc05fa8f0136.json  bda46922-f9d0-42d3-9797-e10a0e7616dd.json  cd755dff-993b-40b6-ab6a-ec2e827d3da7.json  dab9211c-4b45-403f-8158-0d6139cb6d09.json  e5e02d6a-4476-4ac5-98be-bc028754c719.json  fc9218ec-d964-4ffc-ad20-e21a8699e79b.json
device-config-db/: .Gira_429496730210000_439315387020000.json.swp  .db-version  29cf9afc-9099-42cc-b2af-e4b944064988.json  59f8de12-cf83-42c2-a26a-7d4a868c0235.json  5e2e026a-abd9-41c6-8c1d-c28666bfa147.json  a975a9cc-8261-4757-9380-d7c27c825e1d.json  c119b88a-85e0-479c-b7f1-d9c1dbd4f3af.json  d7d8b9d4-4ef6-40a0-9c65-8192c5eef3a7.json  eac885e7-fbb3-49b8-8594-96fd40ae8d82.json  fb25d777-6b08-482d-9dd8-4b890fe210ad.json
location-config-db/: .db-version  4d3e9ff8-b3d4-47b2-9709-6b737aaacfc0.json  674a2360-2247-42a6-8a95-8069a86f98ca.json  c72b6b0e-d13b-4507-9d93-d705cfbb032c.json  c7fa0c6c-5652-4318-bdeb-c103edf4ebef.json  d45dc520-da04-444e-8f1a-0508e3459ee5.json
scene-config-db/: .db-version
unit-group-config-db/: 90c65755-938d-4717-816d-45e99c7aff67.json
user-config-db/: 0053f8bd-7ba1-4b73-9c76-c0e7b8f669e0.json  025f2943-6b52-46eb-855e-b2064508eda6.json  (+3 more)
